--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
+
+  footer {
+  text-align: center;
+  margin-top: 20px;
+  padding-top: 10px;
+  opacity: 0.7;
+  font-size: 14px;
+}
+
 * {
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
@@ -262,6 +271,9 @@ function showStudy() {
 
 newQuestion();
 </script>
+<footer>
+  Leo Wegner
+</footer>
 
 </body>
 </html>
