--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@ body {
   background: linear-gradient(135deg, #1d2671, #c33764);
   min-height: 100vh;
   display: flex;
-  flex-direction: column;  /* for footer at bottom */
+  flex-direction: column;
   align-items: center;
   color: white;
 }
 
 .app {
-  width: 95%;
-  max-width: 600px;
-  min-width: 300px;
+  width: 100%;           /* full width */
+  max-width: none;       /* remove max-width */
+  padding: 15px 10px;    /* some padding for edges */
   background: rgba(255,255,255,0.12);
   backdrop-filter: blur(12px);
   border-radius: 18px;
-  padding: 20px;
-  margin: 20px auto;
+  margin: 0 auto 20px;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -105,7 +104,7 @@ table {
   color: black;
   margin-bottom: 20px;
   display: block;
-  overflow-x: auto;   /* allows horizontal scroll on small screens */
+  overflow-x: auto;
   white-space: nowrap;
 }
 
@@ -124,12 +123,12 @@ footer {
 
 /* Small screen adjustments */
 @media (max-width: 480px) {
-  button, input, .option {
-    font-size: 14px;
-    padding: 10px;
-  }
   #question {
-    font-size: 22px;
+    font-size: 26px;
+  }
+  button, input, .option {
+    font-size: 16px;
+    padding: 12px;
   }
 }
 </style>
